# basachky

./: Array.cpp  Array.hpp  At.hpp  BubbleSort.hpp  BubbleSortArray.cpp  BubbleSortList.cpp  CMakeLists.txt  Concat.hpp  Filter.hpp  HeadTail.hpp  InsertionSort.hpp  InsertionSortArray.cpp  InsertionSortList.cpp  IsEmpty.hpp  LICENSE  Length.hpp  List.hpp  Merge.hpp  MergeSort.hpp  MergeSortArray.cpp  MergeSortList.cpp  Operator.hpp  Print.hpp  QuickSort.hpp  QuickSortArray.cpp  QuickSortList.cpp  Select.hpp  Slice.hpp  SortedInsert.hpp  test.hpp
